# advent_of_code_2021

all_inputs/: download_inputs.py
all_sequantial/: Cargo.toml
all_sequantial/src/: main.rs
aoc_10/: Cargo.toml
aoc_10/src/: main.rs
aoc_11/: Cargo.toml
aoc_11/src/: lib.rs  main.rs
aoc_12/: Cargo.toml
aoc_12/src/: lib.rs  main.rs
aoc_13/: Cargo.toml
aoc_13/benches/: benchmarks.rs
aoc_13/src/: lib.rs
aoc_14/: Cargo.toml
aoc_14/benches/: benchmark.rs
aoc_14/src/: lib.rs
aoc_15/: Cargo.toml
aoc_15/benches/: benchmark.rs
aoc_15/src/: lib.rs
aoc_16/: Cargo.toml
aoc_16/benches/: benchmark.rs
aoc_16/src/: lib.rs
aoc_17/: Cargo.toml
aoc_17/benches/: benchmark.rs
aoc_17/src/: lib.rs
aoc_18/: Cargo.toml
aoc_18/src/: lib.rs
aoc_19/: Cargo.toml
aoc_19/src/: example_same_scanner  example_scanner  lib.rs
aoc_1_1/: Cargo.toml
aoc_1_1/src/: main.rs
aoc_1_2/: Cargo.toml
aoc_1_2/src/: main.rs
aoc_20/: Cargo.toml
aoc_20/src/: lib.rs
aoc_21/: Cargo.toml
aoc_21/src/: lib.rs
aoc_22/: Cargo.toml
aoc_22/src/: lib.rs
aoc_2_1/src/: main.rs
aoc_2_2/src/: main.rs
aoc_3_1/src/: main.rs
aoc_3_2/src/: main.rs
aoc_4_1/: Cargo.toml
aoc_4_1/src/: main.rs
aoc_4_2/: Cargo.toml
aoc_4_2/src/: main.rs
aoc_5_1/src/: main.rs
aoc_5_2/src/: main.rs
aoc_6/src/: main.rs
aoc_7/src/: main.rs
aoc_8/: Cargo.toml
aoc_8/src/: main.rs
aoc_9/: Cargo.toml
aoc_9/src/: main.rs
